Fixed the nav overlap issue and also the bug in the feed.xml file.

--- a/assets/css/compass02.css
+++ b/assets/css/compass02.css
@@ -329,3 +329,10 @@
         padding-left: 5em;
         text-indent: -5em;
     }
+
+    @media only screen and (min-width: 1000px) {
+        header#top .container {
+            padding: 0 38px;
+        }
+        
+    }
